# MSI-P13-Display

./: .gitignore  LICENSE  README.md  README.ru.md  pyproject.toml  requirements.txt
apps/: aic_time.py  aic_touch.py  display_touch_test_v2.py  info_screen.ini  info_screen.py
docs/assets/: README.md
docs/en/: protocol.md  reverse-engineering.md  touch.md
docs/ru/: protocol.md  reverse-engineering.md  touch.md
examples/: clock.py  draw_shapes.py  panel_monitor.py  send_image.py
scripts/: 99-artinchip-usb-display.rules  99-msi-p13-display.rules  install-panel-monitor.sh  install.sh  linux_run_shapes.sh  linux_setup.sh  macos_run_shapes.sh  macos_setup.sh  panel-monitor-driver.sh  reset-vkms-modes.sh
src/em3499_monitor/: __init__.py  display.py  touch.py
src/msi_p13_display/: __init__.py  capture.py  compositor_monitor.py  display.py  drm_io.py  frame.py  panel_monitor.py  send_image.py  stream.py
