[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msi-p13-display"
version = "0.1.0"
description = "Linux userspace driver for the MSI P13 USB display panel and image sender."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Alexander Romanoff" },
    { name = "Wes Sitzes" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: Display",
]
dependencies = [
    "cryptography",
    "Pillow",
    "pyusb",
]
keywords = ["msi", "p13", "usb-display", "pyusb", "kde", "panel-monitor", "artinchip"]

[project.urls]
Repository = "https://github.com/xormal/MSI-P13-Display"

[tool.setuptools.packages.find]
where = ["src"]
